--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <div class="container">
         <div class="myphoto">
           <img
-            src="me.jpg"
-            width="200"
-            height="200"
+            src="3.jpg"
+            width="400"
+            height="500"
             alt="My Image"
           />
         </div>
@@ -32,7 +32,7 @@
             <h1>Hi. I'm <strong>John Xavier Delos Santos</strong>.</h1>
           </header>
           <p>
-            A graduating student from Universidad De Manila, who seeks career challenges in an 
+            A freshgrad student from Universidad De Manila, who seeks career challenges in an 
             engaging atmosphere and competitive environment where I could continuously grow, learn, 
             and improve my skills as well as becoming the best version of myself. Also, I am 
             dedicating my time and effort when it comes to my chosen field for the continuous 
