--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1>Hi. I'm <strong>John Xavier Delos Santos</strong>.</h1>
           </header>
           <p>
-            A freshgrad student from Universidad De Manila, who seeks career challenges in an 
+            A fresh graduate from Universidad De Manila with the bachelors degree in computer programming, who seeks career challenges in an 
             engaging atmosphere and competitive environment where I could continuously grow, learn, 
             and improve my skills as well as becoming the best version of myself. Also, I am 
             dedicating my time and effort when it comes to my chosen field for the continuous 
